# nerva-jax

./: README.md  index.html  nerva-jax.html  pyproject.toml  requirements.txt  setup.cfg
.github/docker/: Dockerfile
.github/workflows/: deploy-asciidoc.yml  deploy-sphinx.yml
data/: README.md  prepare_data.py
doc/: build_asciidoc_documentation.sh  build_sphinx_documentation.sh
doc/asciidoc/: nerva-jax.adoc  settings.adoc
doc/include/: command-line-tools.adoc  cpp-command-line-tools.adoc  cpp-installation.adoc  cpp-overview-of-the-code.adoc  extending-the-library.adoc  introduction.adoc  io.adoc  matrix-operations.adoc  overview-of-the-code.adoc  performance.adoc  python-command-line-tools.adoc  python-extending-the-library.adoc  python-installation.adoc  python-overview-of-the-code.adoc  sparse-neural-networks.adoc
doc/sphinx/: conf.py  index.rst
examples/: cifar10.bat  cifar10.sh  custom_components.py  custom_components_validation.py  extensions.py  mlp_construction.py  mnist.bat  mnist.sh  prepare_datasets.bat  prepare_datasets.sh  run_all_examples.py  run_all_examples.sh  train_cifar10_cli.sh  train_mnist.py  train_mnist_cli.sh  train_synthetic.py  train_synthetic_dataset.py  training1.py
scripts/: check_equations.py  make_distribution.sh  upload_distribution.sh
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/_autosummary/: nerva_jax.activation_functions.html  nerva_jax.datasets.html  nerva_jax.html  nerva_jax.layers.html  nerva_jax.learning_rate.html  nerva_jax.loss_functions.html  nerva_jax.matrix_operations.html  nerva_jax.multilayer_perceptron.html  nerva_jax.optimizers.html  nerva_jax.softmax_functions.html  nerva_jax.training.html  nerva_jax.utilities.html  nerva_jax.weight_initializers.html
sphinx/_modules/: index.html
src/nerva_jax/: __init__.py  activation_functions.py  datasets.py  layers.py  learning_rate.py  loss_functions.py  matrix_operations.py  multilayer_perceptron.py  optimizers.py  training.py  (+3 more)
tests/: run_all_tests.py  run_all_tests.sh  run_tests.py  test_datasets_basics.py  test_learning_rate_schedulers.py  test_loss_functions.py  test_matrix_operations_basics.py  test_multilayer_perceptrons.py  test_one_layer.py  test_optimizers_basics.py  test_softmax_functions_basics.py  utilities.py
tools/: inspect_npz.py  mlp.py
(+54 files in other folders)
