[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nerva-jax"
version = "1.0.0"
description = "An implementation of multilayer perceptrons in JAX."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wieger Wesselink", email = "j.w.wesselink@tue.nl" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 1.21",
  "jax >= 0.4",
  "jaxlib >= 0.4",
  "scikit-learn >= 1.1",
]

[project.urls]
Homepage = "https://github.com/wiegerw/nerva-jax"
Documentation = "https://wiegerw.github.io/nerva-jax/"
"Bug Tracker" = "https://github.com/wiegerw/nerva-jax/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
