[metadata]
name = nerva-jax
version = 0.2
author = Wieger Wesselink
author_email = j.w.wesselink@tue.nl
description = An implementation of multilayer perceptrons in JAX.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiegerw/nerva-jax
project_urls =
    Bug Tracker = https://github.com/wiegerw/nerva-jax/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.10
install_requires =
    numpy >= 1.21
    jax >= 0.4
    jaxlib >= 0.4
    scikit-learn >= 1.1

[options.packages.find]
where = src